--- a/ALaCarte/res/values/strings.xml
+++ b/ALaCarte/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <string name="app_name">A la carte Demo</string>
     <string name="app_id">1404291006478707</string>
+    <string name="parse_app_id">zy96IOxBgOiGHeSKiCvWfzNOWpisixel8aH4Q7xH</string>
+    <string name="parse_client_key">EbLR5dNpSAkY0YcZx618XZwk2J4Xk3vbVEN023rp</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="error">Erorr</string>
@@ -21,5 +23,7 @@
     <string name="share">Share</string>
     <string name="action_location">Where are you?</string>
     <string name="action_location_default">Select one</string>
+    <string name="login">Đăng nhập</string>
+    <string name="logout">Thoát</string>
 
 </resources>
